--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFC107</color>
-    <color name="colorPrimaryDark">#FFA000</color>
-    <color name="colorPrimaryLight">#FFECB3</color>
-    <color name="colorAccent">#FFC107</color>
+<!--    <color name="colorPrimary">#FFC107</color>-->
+<!--    <color name="colorPrimaryDark">#FFA000</color>-->
+<!--    <color name="colorPrimaryLight">#FFECB3</color>-->
+<!--    <color name="colorAccent">#FFC107</color>-->
+<!--    <color name="primaryText">#212121</color>-->
+<!--    <color name="secondaryText">#757575</color>-->
+<!--    <color name="icons">#212121</color>-->
+<!--    <color name="divider">#BDBDBD</color>-->
+    <color name="lightWhite">#FEFEFE</color>
+
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorPrimaryLight">#CFD8DC</color>
+    <color name="colorAccent">#607D8B</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#757575</color>
-    <color name="icons">#212121</color>
+    <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
-    <color name="lightWhite">#FEFEFE</color>
+
 </resources>
